database-services/sift-persist/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sift-persist
spec:
  serviceName: sift-persist
  replicas: 1
  selector:
    matchLabels:
      app: sift-persist-pod
  template:
    metadata:
      labels:
        app: sift-persist-pod
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: sift-persist
        image: knowesis/persist:4.5.0-K8
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 200m
            memory: 2048Mi
          limits:
            cpu: 200m
            memory: 2048Mi
        ports:
        - containerPort: 8091
        volumeMounts:
        - mountPath: /opt/couchbase/var
          name: data-volume
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: ebs-persist-pvc
