database-services/sift-persist/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sift-persist-ingress
  namespace: opolo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: persist.prod.quiinsfelicity.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sift-persist
            port:
              number: 8091
